# Lanthanide

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py
docs/: internals.md
lanthanide/: __init__.py  halfint.py  lanthanide.py  matrix.py  single.py  state.py  symmetry.py  unit.py  vaults  wigner.py
test/: atest_crystal.py  basic.py  basic2.py  carnall1968.py  compare.py  compare_old.py  create-all.py  data_basic.py  data_basic2.py  data_crystal.py  data_states.py  data_triple.py  extract_paper.py  magnetic.py  run.py  show.py  test.py  test_01_halfint.py  test_04_unit.py  test_05_symmetry.py  test_06_state.py  test_07_matrix.py  test_08_lanthanide.py  test_basic.py  test_basic2.py  test_carnall1968.py  test_crystal.py  test_halfint.py  test_judd_24.py  test_lanthanide.py  test_magnetic.py  test_orthogonal.py  test_single.py  test_states.py  test_symmetry.py  test_triple.py  test_unit.py  test_wigner.py
