# pyproject.toml
[build-system]
requires = [
    "setuptools",
	"NumPy",
	"h5py",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "lanthanide",
]

[project]
name = "Lanthanide"
version = "0.2.0"
authors = [
    { name = "Reinhard Caspary", email = "reinhard.caspary@phoenixd.uni-hannover.de"},
]
description = "Python 3 package to calculate the energy levels of lanthanide ions."
readme = "README.md"
dependencies = [
    'NumPy>=1.15',
    'h5py',
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
